--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,31 +6,65 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ListView
-        android:id="@+id/itemList"
-        android:layout_width="match_parent"
-        android:layout_height="380dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true">
 
 
-    </ListView>
 
-    <EditText
-        android:id="@+id/newitem"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignLeft="@+id/itemList"
-        android:layout_below="@+id/itemList"
-        android:layout_marginTop="14dp"
-        android:ems="10"
-        android:hint="enter item"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/newitem"
-        android:layout_alignBottom="@+id/newitem"
-        android:layout_alignRight="@+id/itemList"/>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+           >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:orientation="vertical">
+
+                        <ListView
+                            android:id="@+id/itemList"
+                            android:layout_width="match_parent"
+                            android:layout_height="380dp"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentTop="true"
+                            >
+
+
+                        </ListView>
+
+                        <EditText
+                            android:id="@+id/newitem"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignLeft="@+id/itemList"
+                            android:layout_below="@+id/itemList"
+                            android:layout_marginTop="14dp"
+                            android:ems="10"
+                            android:hint="enter item"/>
+
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignBaseline="@+id/newitem"
+                            android:layout_alignBottom="@+id/newitem"
+                            android:layout_alignRight="@+id/itemList"
+                            android:onClick="addToDoItem"
+                            android:text="ADD"/>
+
+                </LinearLayout>
+
+                
+
+
+        </ScrollView>
+
+
+
+
+
+
+
+
+
+
 
 </RelativeLayout>
