--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/gg"
+    >
 
 
 
@@ -33,22 +35,43 @@
 
                         <EditText
                             android:id="@+id/newitem"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_alignLeft="@+id/itemList"
                             android:layout_below="@+id/itemList"
                             android:layout_marginTop="14dp"
                             android:ems="10"
-                            android:hint="enter item"/>
+                            android:hint="enter item"
 
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignBaseline="@+id/newitem"
-                            android:layout_alignBottom="@+id/newitem"
-                            android:layout_alignRight="@+id/itemList"
-                            android:onClick="addToDoItem"
-                            android:text="ADD"/>
+                            />
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_below = "@id/newitem"
+                            android:gravity="center"
+                            >
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:weightSum="1">
+
+                                        <Button
+                                            android:layout_width="0dp"
+                                            android:layout_height="match_parent"
+                                            android:layout_weight="1"
+                                            android:onClick="addToDoItem"
+                                            android:text="ADD"
+
+                                            android:background="@drawable/new_button"
+                                            android:layout_marginRight="50dp"
+                                            android:layout_marginLeft="50dp"/>
+
+
+
+                                </LinearLayout>
+                        </RelativeLayout>
+
+
 
                 </LinearLayout>
 
